--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
+    "@tanstack/react-query": "^4.36.1",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-final-form": "^6.5.9",
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5"
