--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
